# StudentScoreManager

./: CMakeLists.txt  Check.cpp  Check.h  Coding.cpp  Coding.h  Data.cpp  Data.h  Encryption.cpp  Encryption.h  Layout.cpp  Layout.h  Protection.cpp  Protection.h  README.md  main.cpp  view.h
